# dungeon-runner

./: .env.example  .gitignore  CONTEXT.md  CROSS_REPO.md  README.md  UBIQUITOUS_LANGUAGE.md  pyproject.toml  requirements.txt
docs/: replay-pipeline.md  welcome-to-the-dungeon.md
docs/adr/: 0001-web-game-engine-authoritative.md  0002-promoted-version-semver-and-latest-symlink.md
models/: promotions.jsonl
models/v0.1.29a/: policy.weights.h5
models/v0.1.30a/: policy.weights.h5
models/v0.2/: metrics.json  policy.weights.h5  promotion.json
models/v0.2.01/: metrics.json  policy.weights.h5  promotion.json
models/v0.2.02/: metrics.json  policy.weights.h5  promotion.json
models/v0.2.03/: metrics.json  policy.weights.h5  promotion.json
models/v0.2.04/: metrics.json  policy.weights.h5  promotion.json
scripts/: oscillate_train.py  play_random_game.py  replay-train-and-release.sh  train.py  train_rllib.py
src/dungeon_runner/: __init__.py  actions.py  catalog.py  errors.py  match.py  pettingzoo_aec.py  types_core.py
tests/: conftest.py  test_bidding.py  test_catalog.py  test_context_release_glossary.py  test_cross_repo_docs.py  test_dungeon_effects.py  test_invariants.py  test_match_e2e.py  test_pettingzoo_env.py  test_replay_pipeline_doc.py  test_rl_action_codec.py  test_rules_comprehensive.py  test_scripted_scenarios.py  test_ubiquitous_language.py
tests/replay/: conftest.py  helpers.py  test_dataset.py  test_ingest_cli.py  test_ingest_export.py  test_ingest_parity.py  test_ingest_verbatim.py  test_run_all.py  test_verify.py  test_verify_atomicity.py  (+2 more)
(+126 files in other folders)
