[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dungeon-runner"
version = "0.1.0"
description = "Welcome to the Dungeon game logic"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]
gui = ["pygame>=2.5.0"]
train = [
    "tensorflow>=2.15.0",
    "gymnasium>=0.29.0",
    "pettingzoo>=1.24.0",
    "numpy>=1.23.0",
    "setuptools>=61.0,<82",
    "tensorboard>=2.15.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
